@@ -33,23 +33,23 @@ namespace CIAO_Shapes_Control_comp_Impl
   //============================================================
   // Component Executor Implementation Class: Control_comp_exec_i
   //============================================================
-  
+
   Control_comp_exec_i::Control_comp_exec_i (void)
   {
   }
-  
+
   Control_comp_exec_i::~Control_comp_exec_i (void)
   {
   }
-  
+
   // Supported operations and attributes.
   ACE_Reactor*
   Control_comp_exec_i::reactor (void)
   {
     ACE_Reactor* reactor = 0;
-    ::CORBA::Object_var ccm_object = 
+    ::CORBA::Object_var ccm_object =
       this->ciao_context_->get_CCM_object();
-    if (! ::CORBA::is_nil (ccm_object.in ())) 
+    if (! ::CORBA::is_nil (ccm_object.in ()))
       {
         ::CORBA::ORB_var orb = ccm_object->_get_orb ();
         if (! ::CORBA::is_nil (orb.in ()))
@@ -63,128 +63,128 @@ namespace CIAO_Shapes_Control_comp_Impl
       }
     return reactor;
   }
-  
+
   // Component attributes and port operations.
-  
+
   ::CORBA::ULong
   Control_comp_exec_i::rate (void)
   {
     /* Your code here. */
     return 0;
   }
-  
+
   void
   Control_comp_exec_i::rate (
     ::CORBA::ULong /* rate */)
   {
     /* Your code here. */
   }
-  
+
   ::CORBA::UShort
   Control_comp_exec_i::max_x (void)
   {
     /* Your code here. */
     return 0;
   }
-  
+
   void
   Control_comp_exec_i::max_x (
     ::CORBA::UShort /* max_x */)
   {
     /* Your code here. */
   }
-  
+
   ::CORBA::UShort
   Control_comp_exec_i::max_y (void)
   {
     /* Your code here. */
     return 0;
   }
-  
+
   void
   Control_comp_exec_i::max_y (
     ::CORBA::UShort /* max_y */)
   {
     /* Your code here. */
   }
-  
+
   ::CORBA::UShort
   Control_comp_exec_i::max_size (void)
   {
     /* Your code here. */
     return 0;
   }
-  
+
   void
   Control_comp_exec_i::max_size (
     ::CORBA::UShort /* max_size */)
   {
     /* Your code here. */
   }
-  
+
   ::CORBA::Boolean
   Control_comp_exec_i::resize_shape (void)
   {
     /* Your code here. */
     return false;
   }
-  
+
   void
   Control_comp_exec_i::resize_shape (
     ::CORBA::Boolean /* resize_shape */)
   {
     /* Your code here. */
   }
-  
+
   // Operations from Components::SessionComponent.
-  
+
   void
   Control_comp_exec_i::set_session_context (
     ::Components::SessionContext_ptr ctx)
   {
     this->ciao_context_ =
       ::Shapes::CCM_Control_comp_Context::_narrow (ctx);
-    
+
     if ( ::CORBA::is_nil (this->ciao_context_.in ()))
       {
         throw ::CORBA::INTERNAL ();
       }
   }
-  
+
   void
   Control_comp_exec_i::configuration_complete (void)
   {
     /* Your code here. */
   }
-  
+
   void
   Control_comp_exec_i::ccm_activate (void)
   {
     /* Your code here. */
   }
-  
+
   void
   Control_comp_exec_i::ccm_passivate (void)
   {
     /* Your code here. */
   }
-  
+
   void
   Control_comp_exec_i::ccm_remove (void)
   {
     /* Your code here. */
   }
-  
+
   extern "C"  ::Components::EnterpriseComponent_ptr
   create_Shapes_Control_comp_Impl (void)
   {
     ::Components::EnterpriseComponent_ptr retval =
       ::Components::EnterpriseComponent::_nil ();
-    
+
     ACE_NEW_NORETURN (
       retval,
       Control_comp_exec_i);
-    
+
     return retval;
   }
 }
